--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "rtl-detect": "^1.1.2",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
+    "suneditor": "^2.47.5",
+    "suneditor-react": "^3.6.1",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
