--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dayjs": "^1.11.11",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.3.31",
     "geojson": "^0.5.0",
     "google-map-react": "^2.2.1",
@@ -105,10 +106,12 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/file-saver": "^2.0.7",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
