--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint"
   },
@@ -62,6 +62,7 @@
     "cleave.js": "^1.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "critters": "^0.0.23",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "embla-carousel-autoplay": "^8.1.3",
@@ -85,10 +86,10 @@
     "primereact": "^10.9.4",
     "quill": "^2.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
