--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXTAUTH_SECRET=1kc7Cf4Z2V2XX0WfGLrET9iZzWyDkar9RlqjIK3Vkxo
 # NEXT_PUBLIC_SITE_URL=https://production.d1yk26l9dz4yi5.amplifyapp.com/
-NEXT_PUBLIC_SITE_URL=localhost:300
+NEXT_PUBLIC_SITE_URL=localhost:3000
 AUTH_TRUST_HOST=true
-# NEXT_PUBLIC_API_BASE_URL=http://creditcircle.ap-south-1.elasticbeanstalk.com/api
-NEXT_PUBLIC_API_BASE_URL=http://localhost:5000/api
+NEXT_PUBLIC_API_BASE_URL=http://creditcircle.ap-south-1.elasticbeanstalk.com/api
+# NEXT_PUBLIC_API_BASE_URL=http://localhost:5000/api
